WordPress.org & Main/Plugins/Themes themes: Prevent Rosetta header from flowing behind hamburger icon at smaller viewports.
Props pinkalbeladiya, coffee2code.
Fixes #4990.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9563 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_wporg-header.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_wporg-header.scss
@@ -30,6 +30,7 @@
 		font-family: Georgia, "Times New Roman", serif;
 		font-size: 30px;
 		margin: 0;
+		margin-left: 60px;
 
 		a {
 			border-bottom: none;
@@ -225,6 +226,7 @@
 
 		h2.rosetta {
 			float: left;
+			margin-left: 0;
 			padding: 36px 27px 0;
 		}
 
